src/test/deca/context/valid/created/affect_NULL/CLASS.deca
// Description:
//		Affecter null a une classe
// Resultats:
//		OK

class A {}
{
	A a = null;
}
