src/test/deca/context/invalid/created/declVar/matherror10.deca
// Description:
//  Affectation de float avec identifier float
// Resultats:
//  OK

{
float a = 3. ;
}